# solden

./: .dockerignore  .gitignore  AGENTS.md  AGENT_DESIGN_SPECIFICATION.md  ARCHITECTURE.md  CAPABILITIES.md  CLAUDE.md  CLEARLEDGR_OVERVIEW.md  CUSTOMER_AGENT_CONNECTION_PLAN.md  Clearledgr_Workspace_Scope_GA.md  DESIGN.md  DESIGN_THESIS.md  Dockerfile  Dockerfile.worker  GMAIL_ACTION_BAR_PLAN.md  PLAN.md  README.md  Solden-Manifesto.textClipping  THESIS_AUDIT.md  TODOS.md  TODO_BACKLOG.md  commission-clawback-spec.md  docker-compose.yml  env.example  main.py  railway.toml  requirements.txt  vendor-onboarding-spec.md
clearledgr/: __init__.py
docs/: AGENT_ARCHITECTURE.md  AGENT_HARNESS_AUDIT_2026_04_28.md  API_REFERENCE.md  ARCHITECTURE_NO_ORCHESTRATOR.md  BOX_SCHEMA.md  DESIGN_PARTNER_VALIDATION_PLAYBOOK.md  EMAIL_INTEGRATION.md  EMBEDDED_ECOSYSTEM.md  ENTITY_GRAPH_SCOPING.md  ERP_READINESS_CHECKLISTS.md  GA_LAUNCH_READINESS_TRACKER.md  GA_READINESS_EVIDENCE_PROCESS.md  GETTING_STARTED.md  GMAIL_RUNTIME_RUNNER_SETUP.md  HOW_IT_WORKS.md  MANIFESTO_FILE_LEDGER.md  MANIFESTO_REVIEW.md  OPERATIONAL_MEMORY_ALIGNMENT_AUDIT.md  OPERATIONAL_MEMORY_MAP_SOURCE_TO_PAY.md  OPERATIONAL_MEMORY_OBJECT.md  POST_GA_MONITORING.md  PRODUCT_GAPS_2026_04.md  RAILWAY_DEPLOYMENT.md  RUNBOOKS.md  RUNBOOK_GA.md  RUNBOOK_OUTLOOK_TEAMS.md  STAGING_DRILL_RUNBOOK.md  THESIS_VS_CODEBASE.md  TIER1_AUDIT_2026_04.md  (+9 more)
sdk/python/: CHANGELOG.md  README.md  pyproject.toml
sdk/python/solden/: __init__.py  _version.py  client.py  exceptions.py  webhooks.py
sdk/python/tests/: test_sdk.py
tasks/: todo.md  (+1 more)
(+978 files in other folders)
